test/parser/accept/node-record-f1.ptk
node Struct = record field: `bool`;