test/parser/reject/node-no-type.ptk
# expected: E1203
node foo = ;